add iniial index page and unfinished navbar

--- a/views/landing.ejs
+++ b/views/landing.ejs
@@ -13,7 +13,7 @@
     
     <div id="landing-header">
  		<h1>Welcome to Food Blog!</h1>
-		<a href="/campgrounds" class="btn btn-lg btn-success">View All Posts</a>
+		<a href="/foods" class="btn btn-lg btn-success">View All Posts</a>
     </div>
     
     <ul class="slideshow">
