added comment model and show page.

--- a/views/foods/foodPost.ejs
+++ b/views/foods/foodPost.ejs
@@ -20,9 +20,8 @@
                     <h4> <%= food.name %> </h4>
                 </div>
                 <p>
-                    <a href="#" class="btn btn-primary">More Info</a>
-                    <!--We need to createa an ID for our show template in order-->
-                    <!--to capture it in our app.js-->
+                    <a href="/foods/<%= food._id %>" class="btn btn-primary">More Info</a>
+
                 </p>
             </div>
        
