--- a/views/landing.ejs
+++ b/views/landing.ejs
@@ -9,11 +9,11 @@
     </head>
     <body>
     
+    <!--Make button responsive!-->
     
-    
-    <div id="landing-header">
+    <div class="container-fluid" id="landing-header">
  		<h1>Welcome to FoodTopia</h1>
-		<a href="/foods" class="btn btn-lg btn-success">Click Here To View Foods From Around The World</a>
+		<a href="/foods" data-toggle="collapse"  class="btn btn-lg btn-success">Click Here To View Foods From Around The World</a>
     </div>
     
     <ul class="slideshow">
