made new files, fixed flash messages.

--- a/views/foods/newPost.ejs
+++ b/views/foods/newPost.ejs
@@ -18,7 +18,7 @@
             <button class="btn btn-lg btn-primary btn-block">Submit!</button>
             </div>
         </form>
-           <a href="/campgrounds">Go back?</a>
+           <a href="/foods">Go back?</a>
     </div>
     </div>
      
