removed IMPORTANT file.

--- a/public/stylesheets/main.css
+++ b/public/stylesheets/main.css
@@ -14,7 +14,9 @@
     
 }
 
-#textbox {
-  width: 350px;
-  height: 150px;
-}
+/*#textbox {*/
+/*  width: 350px;*/
+/*  height: 150px;*/
+/*}*/
+
+#center{text-align: center;}
