--- a/views/foods/edit.ejs
+++ b/views/foods/edit.ejs
@@ -2,7 +2,7 @@
 
 <div class="container">
     <div class="row">
-        <h1 style="text-align: center">Edit <%= campground.name %></h1>
+        <h1 style="text-align: center">Edit <%= food.name %></h1>
     <div style="width: 30%; margin: 25px auto;">
         <form action="/foods/<%=food._id %>/?_method=PUT" method="POST">
             <div class="form-group">
@@ -12,7 +12,8 @@
             <input class="form-control" type="text" name="food[image]" value= "<%= food.image %>" >
              </div>
              <div class="form-group">
-            <input class="form-control" type="text" name="food[description]" value= "<%=food.description %>" >
+                 
+            <textarea id="textbox" class="form-control" name="food[description]" required><%= food.description %></textarea>
              </div>
              <div class="form-group">
             <button class="btn btn-lg btn-primary btn-block">Submit!</button>
