--- a/views/foods/show.ejs
+++ b/views/foods/show.ejs
@@ -24,10 +24,10 @@
                 <% food.comments.forEach(function(comment){ %>
                 <div class="row">
                     <div class="col-mid-12">
-                     <strong><%=foods.author.username%></strong>   
+                     <strong><%=comment.author.username%></strong>   
                         <span class="pull-right">10 days ago</span>
                            <p>
-                                <%=foods.text %>
+                                <%=comment.text %>
                             </p>
                         <% if(currentUser && comment.author.id.equals(currentUser._id)) { %>
                             <a class="btn btn-xs btn-warning" 
