--- a/views/foods/show.ejs
+++ b/views/foods/show.ejs
@@ -25,7 +25,7 @@
                 <div class="row">
                     <div class="col-mid-12">
                      <strong><%=comment.author.username%></strong>   
-                        <span class="pull-right">10 days ago</span>
+                        <span class="pull-right"></span>
                            <p>
                                 <%=comment.text %>
                             </p>
