--- a/views/login.ejs
+++ b/views/login.ejs
@@ -13,7 +13,7 @@
     <input class="form-control"  type="password" name="password" placeholder="password" required>
     </div>
      <div class="form-group">
-    <input class="form-control"  type="submit" value="Login">
+    <input class="form-control btn btn-primary"  type="submit" value="Login">
     </div>
 </form>
 </div>
