added required value to comment pages.

--- a/views/comments/newcomment.ejs
+++ b/views/comments/newcomment.ejs
@@ -7,7 +7,7 @@
     <div style="width: 30%; margin: 25px auto;">
         <form action="/foods/<%= food._id %>/comments" method="POST">
             <div class="form-group">
-            <input class="form-control" type="text" name="comment[text]" placeholder="text">
+            <input class="form-control" type="text" name="comment[text]" placeholder="text" required>
             </div>
            
              
